--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ ul{
 }
 
 body > header{
-    background-color: orange;
+    background-color: rgb(255, 143, 221);
     color: white;
     display: flex;
     height: 12vh;
