--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body{
 }
 
 h1{
+    font-family: 'Lobster', sans-serif;
+    font-size: 48px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    letter-spacing: 2px;
     margin: 0px;
     padding: 8px;
 }
@@ -14,7 +18,7 @@ ul{
 }
 
 body > header{
-    background-color: rgb(255, 143, 221);
+    background-color: rgb(246, 123, 255);
     color: white;
     display: flex;
     height: 12vh;
@@ -52,7 +56,46 @@ body > main article{
 }
 
 #main-content > div{
-    width: 70%;
+    width: 100%;
+}
+
+#main-content > aside{
+    width: 20%;
+    margin-left: 20px;
+}
+
+#tip{
+    padding-left: 12px;
+}
+
+#main-content > aside > section{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 12px;
+    padding-left: 0px;
+    padding-right: 12px;
+    border: 2px solid rgb(153, 0, 195);
+    border-radius: 10%;
+    background-color: rgb(235, 214, 255);
+}
+
+#main-content > aside > section > h4{
+    text-align: center;
+}    
+
+#ingredient-list > li > a{
+    color: black;
+    text-decoration: none;
+}
+
+#main-header > h2{
+    font-size: 35px;
+    margin-bottom: 5px;
+}
+
+#main-header > div{
+    display: flex;
+    justify-content: space-evenly;
 }
 
 img{
